--- a/sass/_benefits.sass
+++ b/sass/_benefits.sass
@@ -1,6 +1,6 @@
 #benefits
   padding: 80px 0
-  background-color: $cream
+  background-color: transparent
   @media (max-width: $max-xs-screen)
     padding: 30px 0
   .benefits-item
