--- a/sass/_bootstrap.sass
+++ b/sass/_bootstrap.sass
@@ -4,7 +4,7 @@
   border-radius: 2px
 
 .panel-default
-  background-color: $white
+  background-color: transparent
   border: none
   border-radius: 0
   box-shadow: none
