--- a/sass/_habitat.sass
+++ b/sass/_habitat.sass
@@ -1,5 +1,5 @@
 #habitat
-  background-color: $cream
+  background-color: transparent
   padding: 80px 0
   @media (max-width: $max-xs-screen)
     padding: 0px 0 20px
