--- a/sass/_strategy.sass
+++ b/sass/_strategy.sass
@@ -1,5 +1,5 @@
 #our-strategy
   padding: 80px 0
-  background-color: $white
+  background-color: transparent
   @media (max-width: $max-xs-screen)
     padding: 30px 0
