--- a/pug/index.pug
+++ b/pug/index.pug
@@ -62,39 +62,39 @@ html
     section#who-are-we
       .container
         .row
-          .col-sm-5
+          .center-block.text-center
             .title-section
               h2( data-lang="whoarewe.title") Who are we?
-        .pad-top-20
-          .panel.panel-default.panel-who-are-we
-            .panel-body
-              .row
-                .col-sm-6.who-text
-                  p( data-lang="whoarewe.text1") Üaiki Global Initiative es organizacion de beneficio social fundada en la ciudad de Cambridge, Massachussets, por emprendedores con raises provenientes de distintas partes del globo.
+        .panel.panel-default.panel-who-are-we
+          .panel-body
+            .row
+              .col-sm-6.who-text.align-middle
+                p( data-lang="whoarewe.text1") Üaiki Global Initiative es organizacion de beneficio social fundada en la ciudad de Cambridge, Massachussets, por emprendedores con raises provenientes de distintas partes del globo.
 
-                .col-sm-6.image-full
-                  img(src="img/who1.jpg" width="100%")
-              .row
-                .col-sm-6.image-full
-                  img(src="img/who2.jpg" width="100%")
-                .col-sm-6.who-text
-                  p( data-lang="whoarewe.text2") ÜGI usa el desarrollo tecnologico para conectarse con las comunidades más compromeditas del planeta. Confiamos que el acceso a informacion y educacion de calidad sera clave en el surgimiento millones de personas que hasta el dia de hoy viven completamente marginadas.
-    section#subscribe-newsletter
-      .container
-        .row
-          .col-sm-12
-        h2.text-center( data-lang="newsletter.title") STAY INFORMED. SUBSCRIBE TO OUR NEWSLETTER
-        form.form#subscribe-newsletter-form(method="post")
+              .col-sm-6.image-full
+                img(src="img/who1.jpg" width="100%")
+            .row
+              .col-sm-6.image-full
+                img(src="img/who2.jpg" width="100%")
+              .col-sm-6.who-text.align-middle
+                p( data-lang="whoarewe.text2") ÜGI usa el desarrollo tecnologico para conectarse con las comunidades más compromeditas del planeta. Confiamos que el acceso a informacion y educacion de calidad sera clave en el surgimiento millones de personas que hasta el dia de hoy viven completamente marginadas.
+    //-
+      section#subscribe-newsletter
+        .container
           .row
-            .col-sm-8.col-sm-push-2.col-md-6.col-md-push-3.form-group
-              input.form-control#email-newsletter(type='email' name="email" placeholder="E-mail")
-          .row
-            .col-sm-8.col-sm-push-2.col-md-6.col-md-push-3.form-group.text-center
-              button.btn.btn-subscribe.btn-block-xs#button-newsletter(type='submit' data-lang="newsletter.button") Subscribe
+            .col-sm-12
+          h2.text-center( data-lang="newsletter.title") STAY INFORMED. SUBSCRIBE TO OUR NEWSLETTER
+          form.form#subscribe-newsletter-form(method="post")
+            .row
+              .col-sm-8.col-sm-push-2.col-md-6.col-md-push-3.form-group
+                input.form-control#email-newsletter(type='email' name="email" placeholder="E-mail")
+            .row
+              .col-sm-8.col-sm-push-2.col-md-6.col-md-push-3.form-group.text-center
+                button.btn.btn-subscribe.btn-block-xs#button-newsletter(type='submit' data-lang="newsletter.button") Subscribe
     section#our-strategy
       .container
         .row
-          .col-sm-5
+          .center-block.text-center
             .title-section
               h2( data-lang="strategy.title") Our Strategy
         .row.pad-top-30.pad-top-xs-10
@@ -169,7 +169,7 @@ html
     section#benefits.pad-top-20
       .container
         .row
-          .col-sm-5
+          .center-block.text-center
             .title-section
               h2( data-lang="benefits.title") Benefist
         .row.pad-top-30
@@ -193,7 +193,7 @@ html
     section#partnerships.pad-top-20
       .container
         .row
-          .col-sm-5
+          .center-block.text-center
             .title-section
               h2( data-lang="partnerships.title") Partnerships
 
