--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -25,12 +25,11 @@
     display: block
     width: 100%
 .title-section
-  background-color: $white
-  color: $black
+  background-color: rgba(57,57,57,.75)
+  color: $white
   padding: 10px 35px
   box-shadow: 0px 2px 3px 0 rgba(0,0,0,.25)
-  border-left: 8px solid $orange
-  margin: 5px 0
+  margin: 5px 0 0 0
   @media (max-width: $max-xs-screen)
     text-align: center
   //display: inline-block
