--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -1,3 +1,7 @@
+body
+  .container
+    width: 100%  
+
 .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img
   max-width: none
 #home
