--- a/sass/_partnerships.sass
+++ b/sass/_partnerships.sass
@@ -1,6 +1,6 @@
 #partnerships
   padding: 80px 0
-  background-color: $cream
+  background-color: transparent
   @media (max-width: $max-xs-screen)
     padding: 30px 0
   .panel-partners
