--- a/sass/_topbar.sass
+++ b/sass/_topbar.sass
@@ -6,9 +6,9 @@
 .header-links
   position: absolute
   right: 120px
-  top: 70px
+  top: 20px
   @media (max-width: $max-sm-screen)
-    top: 120px
+    top: 20px
     right: 10px
   @media (max-width: $max-xs-screen)
     position: relative
@@ -22,6 +22,7 @@
     @media (max-width: $max-xs-screen)
       display: block
       text-align: center
+      background-color: rgba(100,100,100,.9)
     a
       color: $white
       background-color: rgba(100,100,100,.9)
@@ -34,6 +35,7 @@
       box-shadow: 0 1px 2px 0 rgba(0,0,0,.5)
       &:hover
         background-color: rgba(100,100,100,.9)
+        
       &:active
         background-color: rgba(100,100,100,.9)
       @media (max-width: $max-xs-screen)
