--- a/sass/_ugni.sass
+++ b/sass/_ugni.sass
@@ -1,6 +1,6 @@
 #ugni
   padding: 80px 0
-  background-color: $white
+  background-color: transparent
   @media (max-width: $max-xs-screen)
     padding: 20px 0
   .ugni-progress
