--- a/sass/_whoarewe.sass
+++ b/sass/_whoarewe.sass
@@ -1,6 +1,5 @@
-
 #who-are-we
-  background-color: $cream
+  background-color: transparent
   padding: 80px 0
   @media (max-width: $max-xs-screen)
     padding: 30px 0
@@ -9,11 +8,12 @@
       padding-top: 0
       padding-bottom: 0
       p
-        color: $gray
+        color: #000
         padding: 100px 60px
-        font-size: 16px
+        font-size: 22px
         line-height: 30px
         margin: 0
+        text-align: center
         @media (max-width: $max-md-screen)
           padding: 75px 40px
         @media (max-width: $max-sm-screen)
