--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,6 +1,8 @@
 body
   height: 100%
   min-height: 100%
+  background-image: url("../img/fondo.png")
+  background-size: 100% 100%
 html
   height: 100%
 
