--- a/pug/index.pug
+++ b/pug/index.pug
@@ -78,6 +78,14 @@ html
                 img(src="img/who2.jpg" width="100%")
               .col-sm-6.who-text.align-middle
                 p( data-lang="whoarewe.text2") ÜGI usa el desarrollo tecnologico para conectarse con las comunidades más compromeditas del planeta. Confiamos que el acceso a informacion y educacion de calidad sera clave en el surgimiento millones de personas que hasta el dia de hoy viven completamente marginadas.
+    
+    section#volunteer
+      .container
+        h4.text-center( data-lang="volunteer.title") Volunteer / Intern and Career
+        p.text-center
+          span( data-lang="volunteer.text-before")  We offer opportunities for people that want to create real impact [
+          a(href="#" data-toggle="modal" data-target="#volunteer-modal" data-lang="volunteer.link") Click here
+          span( data-lang="volunteer.text-after")  ] for contact usv    
     //-
       section#subscribe-newsletter
         .container
@@ -127,7 +135,7 @@ html
         .row.pad-top-40
           .col-sm-12
             .embed-responsive.embed-responsive-16by9
-              iframe.embed-responsive-item(src="https://www.youtube.com/embed/bAMNErzPrQA" width="100%" height="inherit")
+              iframe.embed-responsive-item(src="https://www.youtube.com/embed/c-ANLSHcyhM" width="100%" height="inherit")
 
     section#habitat
       .container
@@ -209,15 +217,7 @@ html
                     img.partner-img(src="img/25.png")
                   .col-sm-6.text-center
                     img.partner-img(src="img/26.png")
-
-    section#volunteer
-      .container
-        h4.text-center( data-lang="volunteer.title") Volunteer / Intern and Career
-        p.text-center
-          span( data-lang="volunteer.text-before")  We offer opportunities for people that want to create real impact [
-          a(href="#" data-toggle="modal" data-target="#volunteer-modal" data-lang="volunteer.link") Click here
-          span( data-lang="volunteer.text-after")  ] for contact us
-
+ 
     include ./shared/_footer.pug
 
     include ./shared/_scripts.pug
