--- a/pug/shared/_head.pug
+++ b/pug/shared/_head.pug
@@ -31,4 +31,4 @@ link(rel="icon" href="img/favicon.png")
 link(rel="stylesheet" href="css/font-awesome.min.css")
 link(rel="stylesheet" href="css/bootstrap.min.css")
 link(rel="stylesheet" href="css/main.css")
-script(type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js")
+//script(type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js")
