--- a/pug/shared/_scripts.pug
+++ b/pug/shared/_scripts.pug
@@ -1,8 +1,8 @@
 script(src="/js/jquery-3.1.1.min.js")
 script(src="/js/bootstrap.min.js")
 script(src="/js/index.js")
-script(type="text/javascript").
-    (function(){
-        emailjs.init("user_XCkhVus3oPZ9xf2vCeLjH");
-    })();
-script(src="/js/emailjs.js")
+//script(type="text/javascript").
+//    (function(){
+//        emailjs.init("user_XCkhVus3oPZ9xf2vCeLjH");
+//    })();
+//script(src="/js/emailjs.js")
